Fix overflow

--- a/_assets/sass/_layout.sass
+++ b/_assets/sass/_layout.sass
@@ -1,7 +1,7 @@
 html,
 body
   height: 100vh
-  overflow-x: hidden
+  overflow: hidden
   position: relative
   width: 100vw
 
@@ -10,6 +10,7 @@ body
 
 body
   background: $color-white
+  overflow-y: auto
   padding: 6em 1.5em 0
 
   @media (min-width: 42em)
